# week-meals

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  litestream.yml
.github/workflows/: ci-web.yml  ci.yml  deploy-web.yml
api/: Cargo.toml
api/auth/: Cargo.toml
api/auth/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  presentation.rs
api/auth/src/application/: commands.rs
api/auth/src/application/commands/: login.rs  logout.rs
api/auth/src/domain/: device.rs  household.rs  pairing.rs  password.rs  repository.rs  user.rs
api/cli/: Cargo.toml
api/cli/src/: ingredient_yaml.rs  main.rs  recipe_yaml.rs  scrape.rs
api/kernel/: Cargo.toml
api/kernel/src/: error.rs  id.rs  ids.rs  lib.rs  quantity.rs  repository.rs
api/meal-plan/: Cargo.toml
api/meal-plan/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  presentation.rs  testing.rs
api/meal-plan/src/application/: commands.rs  queries.rs
api/migrations/: 20260715090000_households_users_invitations.sql  20260715100000_recipes.sql  20260715110000_meal_plan.sql  20260717120000_seed_demo_household.sql  20260718170000_shopping_list.sql  20260720120000_passkeys_auth.sql  20260721130000_recipes_cooked_count.sql  20260721140000_household_week_start_day.sql
api/recipes/: Cargo.toml
api/recipes/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  presentation.rs  testing.rs
api/recipes/src/application/: commands.rs  queries.rs  scrape.rs
api/recipes/src/infrastructure/: scrape.rs
api/server/: Cargo.toml
api/server/src/: lib.rs  main.rs
api/server/tests/: auth_flow.rs  health.rs  meal_plan_flow.rs  postgres_migration.rs  recipes_flow.rs  shopping_list_flow.rs
api/server/tests/common/: mod.rs
api/shopping-list/: Cargo.toml
api/shopping-list/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  presentation.rs
api/shopping-list/src/application/: commands.rs  queries.rs
api/shopping-list/src/domain/: conversion.rs  list.rs  reference.rs
data/: ingredients.yaml
data/recipes/: ratatouille.yaml
docs/: deploiement-front.md  plan.md
docs/adr/: 0001-stack-rust-axum-scaleway.md  0002-auth-sans-email.md  0003-recettes-db-plus-seed.md  0004-offline-liste-courses.md  0005-decoupage-vertical-par-domaine.md  0006-auth-passkeys-appareils-enroles.md  0007-hebergement-fly-mono-app.md  0008-sqlite-volume-fly.md  0009-photos-volume-fly.md
docs/design/: brief.md
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
web/public/: _headers  _redirects
web/scripts/: generate-icons.mjs
web/src/: main.tsx  query.ts  router.tsx
web/src/api/: auth.ts  client.test.ts  client.ts  household.ts  meal-plan.ts  recipes.test.ts  recipes.ts  session.test.ts  session.ts  shopping-list.test.ts  shopping-list.ts
web/src/components/: AppMenu.tsx  AppShell.tsx  AuthGate.tsx  InstallPrompt.tsx  ReloadPrompt.tsx  TabBar.tsx  auth.css  components.css  theme-icons.tsx
web/src/lib/: food-emoji.test.ts  food-emoji.ts
web/src/routes/: login.tsx  recipe-detail.tsx  recipe-form.tsx  recipes.tsx  screens.css  settings.tsx  shopping.tsx  week.tsx
web/src/theme/: ThemeProvider.test.tsx  ThemeProvider.tsx  global.css  theme-context.ts  tokens.css
