[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kernel = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
# Hachage du code d'appairage (Argon2id) : réutilisé ici pour un secret
# court-vivant. `password-hash` apporte `OsRng` (sel + génération du code).
argon2 = "0.5.3"
password-hash = { version = "0.5", features = ["getrandom"] }
# Passkeys WebAuthn (cf. ADR-0006) :
#  - conditional-ui                   → `start_discoverable_authentication`, le
#                                       login sans identifiant
#  - danger-allow-state-serialisation → sérialiser l'état de cérémonie en session
# `resident-key-support` n'est PAS activée : elle ne débloque que
# `start_attested_resident_key_registration`, qui exige une liste de CA
# d'attestation et pose `reject_synchronised_authenticators(true)` — soit le
# rejet des passkeys iCloud/Google, exactement l'inverse de ce qu'on veut.
webauthn-rs = { version = "0.5.5", features = [
    "conditional-ui",
    "danger-allow-state-serialisation",
] }
tracing = "0.1"
# 0.14 pour rester aligné sur `tower-sessions-sqlx-store` (store Postgres).
tower-sessions = "0.14"
axum = { workspace = true, features = ["json"] }
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true }
