[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# Noyau pur : aucune dépendance d'infrastructure.
[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
