[package]
name = "meal-plan"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kernel = { workspace = true }
auth = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
