[package]
name = "shopping-list"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kernel = { workspace = true }
auth = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
